--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "recharts": "^3.4.1"
+    "react-parallax-tilt": "^1.7.313",
+    "recharts": "^3.4.1",
+    "sonner": "^2.0.7",
+    "vite-plugin-pwa": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
